[package]
name = "rspolib"
version = "0.0.6"
edition = "2021"
readme = "../README.md"
description = "PO and MO files manipulation library."
license = "MIT"
documentation = "https://docs.rs/rspolib"
repository = "https://github.com/mondeja/rspolib"

[lib]
name = "rspolib"
path = "src/lib.rs"

[dependencies]
unicode-linebreak = "0.1.1"
unicode-width = "0.1.10"
natord = "1.0.9"
snafu = "0.8.0"
lazy_static = "1.4.0"

[dev-dependencies]
rspolib-testing = { path = "./testing" }
criterion = "0.5.1"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "formatting"
harness = false
